--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-boilerplate",
-  "version": "1.1.0",
-  "description": "FORK form Jesper Orb - Gulp boilerplate with browserify and sass",
+  "version": "1.0.0",
+  "description": "FORK of Jesper Orb - Gulp boilerplate with browserify and sass",
   "main": "script.js",
   "scripts": {
     "start": "gulp"
